--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <h1>CSS-GRID</h1>
     </head>
     <section>
-        <img src="image.png">
+        <div>
+            <img src="image.png">
+        </div>
+       
     </section>
 </body>
 </html>
